<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/tb_about"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:elevation="4dp"
        app:menu="@menu/elective"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/about_iFAFU" />

    <ImageView
        android:id="@+id/iv_app_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="120dp"
        tools:ignore="ContentDescription"
        tools:src="@drawable/icon_ifafu_round" />

    <TextView
        android:id="@+id/tv_version_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:text="版本号1.2.6" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <ImageButton
        android:id="@+id/btn_feed"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/feed"
        android:src="@drawable/ic_feed" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:autoLink="web"
        android:text="@string/about_2"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textColorLink="@color/blue"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/about_3"
        android:textAlignment="center"
        android:textColor="#04e614"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_privacy_policy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="8dp"
        android:textSize="14sp"
        android:text="@string/ifafu_privacy_policy"
        android:textColor="@color/blue1" />

</LinearLayout>
