<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.os.Build" />

        <import type="android.view.View" />

        <variable
            name="vm"
            type="cn.ifafu.ifafu.ui.login.LoginViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ImageView
            android:id="@+id/bg_logo"
            visibleGoneWhen="@{Build.VERSION.SDK_INT&lt;Build.VERSION_CODES.M}"
            android:layout_width="360dp"
            android:layout_height="360dp"
            android:layout_centerInParent="true"
            android:alpha="0.05"
            android:src="@{vm.account.length() != 9 ? @drawable/img_fafu_bb : @drawable/img_fafu_js}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription"
            tools:src="@drawable/img_fafu_bb" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/login_welcome"
            android:textColor="@color/blue1"
            android:textSize="25sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btn_close"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_gravity="bottom"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/close"
            android:padding="4dp"
            android:src="@drawable/ic_close"
            app:isVisible="@{vm.isShowCloseBtn}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:layoutAnimation="@anim/layout_fall_down"
            android:orientation="vertical"
            android:paddingBottom="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layoutAnimation="@null">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/icon_ifafu_round"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/base_on_fafu"
                android:textColor="@color/blue1"
                android:textSize="18sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_sno"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textColorHint="@color/blue1"
                android:theme="@style/TextInputLayout.Login"
                app:hintTextAppearance="@style/HintTextAppearance"
                app:hintTextColor="@color/blue1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_account"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="4dp"
                    android:hint="@string/account"
                    android:inputType="number"
                    android:text="@={vm.account}"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@drawable/shape_edit_cursor"
                    android:textSize="18sp"
                    tools:text="1234" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textColorHint="@color/blue1"
                android:theme="@style/TextInputLayout.Login"
                app:hintTextAppearance="@style/HintTextAppearance"
                app:hintTextColor="@color/blue1"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="4dp"
                    android:hideKeyboardOnInputDone="@{true}"
                    android:hint="@string/password"
                    android:imeActionLabel="@string/login"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:text="@={vm.password}"
                    android:textColor="@color/black"
                    android:textColorHint="@color/blue1"
                    android:textCursorDrawable="@drawable/shape_edit_cursor"
                    android:textSize="18sp"
                    tools:text="123456" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/ripple_btn_blue"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <cn.ifafu.ifafu.ui.view.SmoothCheckBox
                android:id="@+id/checkbox_policy"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginEnd="4dp"
                android:padding="4dp"
                app:color_checked="@color/blue1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/read_and_agree"
                android:textColor="#666" />

            <TextView
                android:id="@+id/tv_policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ifafu_privacy_policy"
                android:textColor="@color/blue1" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
